build: pin the toolchain and stop a green build that runs no tests
Standing up a reproducible build ahead of the publications work. None of
this is publications-specific -- it is worth having on its own.

Maven wrapper, pinned to 3.9.16. The build previously depended on a
Maven bundled inside an IntelliJ install path, which moves on IDE
upgrade. .gitattributes keeps mvnw at LF: it is a /bin/sh script and a
CRLF checkout breaks the interpreter line outright.

Java 21. Above 21 the Quarkus augmentation in niord-dk-web fails when
Byte Buddy refuses the newer class file version while enhancing
entities. -Dnet.bytebuddy.experimental=true silences that, but the flag
disables a safety check in the bytecode enhancer -- the machinery behind
lazy loading and dirty tracking. Pinning the JDK is cheaper and safer
than running every entity test under an explicitly unsupported enhancer.

Surefire pinned. The root pom declared surefire-plugin.version but never
bound the plugin, so the version came from the Maven super-POM (3.5.4
observed). Surefire's provider auto-detection decides which tests run at
all, so an unpinned version is a live reproducibility hole.

JUnit 5 alongside JUnit 4, plus TestSuiteGuardTest. quarkus-junit5
switches Surefire to the JUnit Platform provider, and without the
vintage engine the platform discovers none of the existing suite: the
build reports "Tests run: 0, Failures: 0, Errors: 0" and then BUILD
SUCCESS. Verified by removing the vintage engine and observing exactly
that. On a project where the tests are the only ground truth, a green
build that ran nothing is the worst failure mode available, so the guard
asserts a floor on the discovered test count and fails loudly instead.

./mvnw -pl niord-core test -> 31 tests, 0 failures.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>